# SchemeRaytracer

./: .editorconfig  .gitignore  .gitmodules  README.md  algos.txt
doc/: TODO  ideas.txt
lang/: CMakeLists.txt  README.md  build_codegen.ps1  build_lib_for_clang.ps1  run.ps1
lang/codegen/: .gitignore  codegen.elf  main.cpp  outfile.ll
lang/codegen/deprecated/: external.cpp  external.h  main.cpp
lang/interp/: main.cpp
lang/repl/: main.cpp
lang/scripts/: README.md  build_codegen_asm.ps1  build_codegen_elf.ps1  build_codegen_exe.ps1  build_codegen_executable.ps1  build_oogl_lib_for_clang.ps1  run.ps1  run_all_tests.ps1  run_draw_test.ps1  run_draw_test_elf.ps1  run_draw_test_exe.ps1  run_draw_test_to_asm.ps1
lang/src/: error.h  llvm_headers.h  main.cpp  object.cpp  object.h  parser.cpp  parser.h  scheme.cpp  scheme.h  scope.cpp  scope.h  tokenizer.cpp  tokenizer.h
lang/src/error/: error.hpp
lang/src/graphics/: graphics.cpp  graphics.h
lang/src/helpers/: helpers.cpp  helpers.hpp  llvm_headers.hpp
lang/src/lambda/: lambda.cpp  lambda.hpp
lang/src/object/: object.cpp  object.hpp  object_fwd.hpp
lang/src/parser/: parser.cpp  parser.hpp
lang/src/scheme/: scheme.cpp  scheme.hpp
lang/src/scope/: scope.cpp  scope.hpp  scope_fwd.hpp
lang/src/tokenizer/: tokenizer.cpp  tokenizer.hpp
lang/test/: all_tests_codegen.scm  codegen.scm  draw_test_codegen.scm  scheme_test.h  test_boolean.cpp  test_eval.cpp  test_integer.cpp  test_lambda.cpp  test_list.cpp  test_symbol.cpp
lang/test/raytracer/: README.md  geom.scm  main.scm  random.scm  ray.scm  shoot.scm  sphere.scm
lang/tools/cmake/: FindCatch.cmake  LLVMConfig.cmake
lang/tools/util/: strict_iterator.h  util.h
sim/: CMakeLists.txt  ISA.hpp  main.cpp
sim/context/: context.cpp  context.hpp
sim/cpu/: cpu.hpp
sim/gui/: gui.cpp  gui.hpp
sim/instruction/: instruction.cpp  instruction.hpp
sim/new_clean/: .gitignore  CMakeLists.txt  README.md
sim/new_clean/src/: context.hpp  instructions.hpp  main.cpp
sim/window/: window.cpp  window.hpp
